# binance_data_streaming

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
Docker/: .dockerignore  Dockerfile  docker-compose.yml  init.sql
app/: binance_client.py  config.py  database.py
config/: config.toml
src/: binance_client.py  data_validation.py  database.py  logger_print.py
test/: notebook.ipynb
