[project]
name = "data-eng"
version = "0.1.0"
description = ""
authors = [
    {name = "Mahmedorabi",email = "mahmedorabi297@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uuid (>=1.30,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
